--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <h2 class="content-head is-center">Tests pour le Distanciel</h2>
   <aside>
        <p>
-           Bonjour, vous voici sur la page pour effectuer les tests ! </p>
-           <p>N'oubliez pas de cliquer sur "Envoyer" en bas de la page, une fois les tests effectués.<b></b>
+          <FONT size="20">  Bonjour, vous voici sur la page pour effectuer les tests !</FONT> </p>
+           <p> <FONT size="20">N'oubliez pas de cliquer sur "Envoyer" en bas de la page, une fois les tests effectués.</FONT><b></b>
        </p>
    </aside>
 
