--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
   </head>
  <!--FIN ICI -->
 <body>
-  <h2 class="content-head is-center">Tests pour le Distanciel</h2>
+  <h2 class="content-head is-center"><FONT size="20">Tests pour le Distanciel</FONT></h2>
   <aside>
        <p>
-          <FONT size="20">  Bonjour, vous voici sur la page pour effectuer les tests !</FONT> </p>
-           <p> <FONT size="20">N'oubliez pas de cliquer sur "Envoyer" en bas de la page, une fois les tests effectués.</FONT><b></b>
+          <FONT size="14">  Bonjour, vous voici sur la page pour effectuer les tests !</FONT> </p>
+           <p> <FONT size="14">N'oubliez pas de cliquer sur "Envoyer" en bas de la page, une fois les tests effectués.</FONT><b></b>
        </p>
    </aside>
 
