--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
   </head>
  <!--FIN ICI -->
 <body>
-  <h2 class="content-head is-center"><FONT size="20">Tests pour le Distanciel</FONT></h2>
+  <h2 class="content-head is-center"><FONT size="14">Tests pour le Distanciel</FONT></h2>
   <aside>
        <p>
-          <FONT size="14">  Bonjour, vous voici sur la page pour effectuer les tests !</FONT> </p>
-           <p> <FONT size="14">N'oubliez pas de cliquer sur "Envoyer" en bas de la page, une fois les tests effectués.</FONT><b></b>
+          <FONT size="8">  Bonjour, vous voici sur la page pour effectuer les tests !</FONT> </p>
+           <p> <FONT size="8">N'oubliez pas de cliquer sur "Envoyer" en bas de la page, une fois les tests effectués.</FONT><b></b>
        </p>
    </aside>
 
@@ -34,7 +34,7 @@
 
     <div class="form-elements">
       <fieldset class="pure-group">
-        <label for="name">Nom et prénom :</label>
+        <label for="name"><FONT size="5">Nom et prénom :</FONT> </label>
         <input id="name" name="name" placeholder="Exemple: AIRES Jérémy" />
       </fieldset>
         
