--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     </div>
 
   
-    <div class="thankyou_message" style="display:">
+    <div class="thankyou_message" style="display:none;">
       <h2><em>Merci d'avoir effectué les tests</em>, ils ont bien été envoyés au Support technique</h2>
     </div>
 
