--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@
 
   
     <div class="thankyou_message" style="display:none;">
-      <h2><em>Merci d'avoir effectué les tests</em>, ils ont bien été envoyés au Support technique</h2>
+      <label><em>Merci d'avoir effectué les tests</em>, ils ont bien été envoyés au Support technique</label>
     </div>
-
+    
       <script data-cfasync="false" src="form-submission-handler.js"></script>
   </form>
 
