--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
-</head>
-      <!--Ca COmmence ICI le test micro cam-->
-    <head>
-    <meta name="description" content="Test webcam and microphone on your browser">
-    <base target="_blank">
     <link href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="./css/reading.css">
     <link rel="stylesheet" href="./css/webcam.css">
@@ -201,7 +196,7 @@
 
   
     <div class="thankyou_message" style="display:none;">
-      <label><em>Merci d'avoir effectué les tests</em>, ils ont bien été envoyés au Support technique</label>
+      <h2><FONT size="6"><em>Merci d'avoir effectué les tests</em>, ils ont bien été envoyés au Support technique</FONT></h2>
     </div>
     
       <script data-cfasync="false" src="form-submission-handler.js"></script>
