--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
                <tr>
         <fieldset class="pure-group">
             <td><label for="Download"><FONT size="2.5">Débit montant (Download):</FONT></label></td>
-            <td><label for="Upload"><FONT size="2.5">Débit descendant (Upload):</FONT></label></td>
             <td><label for="Ping"><FONT size="2.5">Ping:</FONT></label></td>
+            <td><label for="Upload"><FONT size="2.5">Débit descendant (Upload):</FONT></label></td>
             <iframe style="border:none;position:center;width="560" height="315";overflow:auto;" src="//openspeedtest.com/Get-widget.php?Auto=10"></iframe></div>
              </fieldset>
             </tr>
               <tr>
         <fieldset class="pure-group">
-            <td><input id="Download" name="Download" placeholder="27 Mbps" /></td>
-        <td><input id="Upload" name="Upload" placeholder="22 Mbps" /></td> 
-            <td><input id="Ping" name="Ping" placeholder="31 Ms" /></td> 
+            <td><input id="Download" name="Download" placeholder="? Mbps" /></td>
+            <td><input id="Ping" name="Ping" placeholder="? Ms" /></td> 
+        <td><input id="Upload" name="Upload" placeholder="? Mbps" /></td>  
                   </fieldset>
             </tr>
           
