--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
   <form class="gform pure-form pure-form-stacked" method="POST" data-email="example@email.net"
   action="https://script.google.com/macros/s/AKfycbyIy7KL5wQYVx25_ofa4UDtaPuZgwG35gbTzs5ecQ/exec">
 
+        <div class="thankyou_message" style="display:none;">
+      <p><FONT size="6"><em>Merci d'avoir effectué les tests</em>, ils ont bien été envoyés au Support technique</FONT><p>
+    </div>
 
     <div class="form-elements">
       <fieldset class="pure-group">
