--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                <tr>
         <fieldset class="pure-group">
            <td> <label for="Stage"><FONT size="4">Intitulé de la formation :</FONT></label></td>
-            <td><label for="Debut"><FONT size="4">Date de début de la formation :</FONT></label></td>
+            <td><label for="Debut"><FONT size="4">Date de la formation :</FONT></label></td>
           </fieldset>
             </tr>
               <tr>
