--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                        <div class="col-md-6 col-sm-6">
                          <table>
                               <label for="name">Nom et Prénom</label>
-                            <input id="name" name="name"  required placeholder="Aires Jérémy" />
+                            <input id="name" name="name"  required placeholder="Nom Prénom" />
                         </fieldset>
                          </tr>
                          <tr>
