--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         
                         <fieldset>
                              <label for="Stage">Intitulé de la formation</label>
-                            <!--                      <input id="Stage" name="Stage" placeholder="Azure AZ 900" />-->
+                            <!--                      <input id="Stage" name="Stage" placeholder="Selectionnez votre formation" />-->
                             <span id="Stage" class="selectivity-input"></span>
                         </fieldset>
                     </div>
@@ -428,7 +428,7 @@
 {text: 'BI107 - Data Science - Mise en œuvre du Deep Learning', software: null},
 {text: 'BI053 - l\'apprentissage profond avec Keras', software: null},
 {text: 'BI054 - l\'apprentissage profond avec TensorFlow', software: null},
-{text: 'MSDP100 - Microsoft Azure - Conception et implémentation de solutions de Data Science', software: null},
+{text: 'MSDP100 - Microsoft - Conception et implémentation de solutions de Data Science', software: null},
 {text: 'BI100 - Systèmes d\'information décisionnels - Concepts et architectures', software: null},
 {text: 'BI090 - Les fondamentaux de la statistique appliquée', software: null},
 {text: 'BI103 - Les fondamentaux de l\'analyse statistique avec R', software: null},
