--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 
                 <div class="col-md-5 col-sm-5">
                      
-                     <p><br><br>Ib Formation | <font size=0.2rem ><em>by Aires Ribeiro Jérémy</em></font></p>
+                     <p><br><br>Ib Formation</p> <!--  <font size=0.2rem ><em>by Aires Ribeiro Jérémy</em></font>-->
                     </div>
 
               <!-- <div class="col-md-offset-1 col-md-4 col-sm-offset-1 col-sm-3">
