--- a/index.html
+++ b/index.html
@@ -874,7 +874,7 @@
         items: items.map(function (item) {
             return item.text;
         }),
-        placeholder: 'Azure AZ 900'
+        placeholder: 'Selectionnez votre formation'
     });
     stageSelector.on('change', function () {
         $('#show_formation_software_installed').css('display', 'none');
