--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <p class="margin-bottom-2 ae-1"><span class="opacity-6">IB</p>
             <h1 class="ae-2 huge fromAbove margin-bottom-2">Bienvenue sur le test distanciel</h1>
             <!--<a href="#" class="button green gradient ae-3">Purchase</a>-->
-			 <p class="margin-bottom-2 ae-1"><span class="opacity-6">Le test se passe en 4 étapes <br>Pour passer les étapes, cliquez sur la flèche en bas de page<br>Une fois le test effectué n'oubliez pas de cliquer sur "envoyer".</p>
+			 <p class="margin-bottom-2 ae-1"><span class="opacity-6">Le test se passe en 4 étapes <br>Pour passer les étapes, cliquez sur la flèche en bas de page<br>Une fois le test effectué, n'oubliez pas de cliquer sur "envoyer"</p>
           </div>
           <ul class="grid fixedSpaces left margin-top-10">
             <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-4 fromLeft">
@@ -211,7 +211,7 @@
             </li>
             <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-5 fromLeft">
              <h3>Débit</h3>
-             <p class="tiny opacity-6">Assurez-vous d'etre en filaire pour un meilleur débit.</p>
+             <p class="tiny opacity-6">Assurez-vous d'être en filaire pour un meilleur débit.</p>
             </li>
             <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-6 fromLeft">
              <h3>Matériel</h3>
